<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/backimg"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_12sdp"
            android:src="@drawable/ic_back_arrow" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">

        <customfonts.TextView_opensans_bold
            android:id="@+id/booking_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/calendarView"
            android:background="#EEEEEE"
            android:elevation="@dimen/_2sdp"
            android:gravity="center"
            android:text="@string/bookings"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <customfonts.TextView_opensans_light
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_date_with_colon"
                    android:textColor="#222222" />

                <customfonts.TextView_opensans_italic
                    android:id="@+id/event_date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/black" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <customfonts.TextView_opensans_light
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/booking_id_with_colon"
                    android:textColor="#222222" />

                <customfonts.TextView_opensans_italic
                    android:id="@+id/booking_id_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/black" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <customfonts.TextView_opensans_light
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_all"
                    android:textColor="#222222" />

                <customfonts.TextView_opensans_italic
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/black" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <customfonts.TextView_opensans_light
                    android:id="@+id/displaying_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#222222" />


            </LinearLayout>

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/booking_layout"
            android:background="@color/white">


        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/frame_home_Search"
        android:layout_height="match_parent">

    </FrameLayout>
</RelativeLayout>